// By Ratheesh Kumar, Back-end Engineer
// Last update: [Current Date]

syntax = "proto3";

package ulimateuser;

option go_package = "github.com/yourorg/ultimate-rent-car/ultimate-rent-user-service/internal/pb/ulimateuser";

service UserService {
    // User Authentication
    rpc Signup(SignupRequest) returns (SignupResponse);
    rpc VerifyOtp(OtpRequest) returns (Response);
    rpc Login(LoginRequest) returns (LoginResponse);

    // Profile Management
    rpc GetProfile(ID) returns (ProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (Response);

    // Address Management
    rpc AddAddress(AddAddressRequest) returns (Response);
    rpc UpdateAddress(UpdateAddressRequest) returns (Response);
    rpc DeleteAddress(ID) returns (Response);
    rpc GetAddresses(ID) returns (AddressListResponse);

    // Password Management
    rpc ChangePassword(ChangePasswordRequest) returns (Response);

    // Document Upload
    rpc UploadDocument(UploadDocumentRequest) returns (Response);

    // Wallet Management
    rpc GetWalletBalance(ID) returns (WalletResponse);
    rpc UpdateWalletBalance(UpdateWalletRequest) returns (Response);

    // Admin Operations
    rpc BlockUser(ID) returns (Response);
    rpc UnblockUser(ID) returns (Response);
    rpc GetAllUsers(NoParam) returns (UserListResponse);
}

message NoParam {}

message Response {
    enum Status {
        OK = 0;
        ERROR = 1;
    }
    Status status = 1;
    string message = 2;
    oneof payload {
        string error = 3;
        string data = 4;
    }
}

// User Authentication Messages
message SignupRequest {
    string phone = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
}

message SignupResponse {
    Response response = 1;
    uint32 user_id = 2;
}

message OtpRequest {
    string phone = 1;
    string otp = 2;
}

message LoginRequest {
    string phone = 1;
    string password = 2;
}

message LoginResponse {
    Response response = 1;
    string token = 2;
    uint32 user_id = 3;
}

// Profile Messages
message ProfileResponse {
    Response response = 1;
    Profile profile = 2;
}

message UpdateProfileRequest {
    uint32 user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string aadhar_no = 5;
    string pancard_no = 6;
    string licence = 7;
}

// Address Messages
message AddAddressRequest {
    uint32 user_id = 1;
    string house = 2;
    string street = 3;
    string city = 4;
    uint32 zip = 5;
    string state = 6;
}

message UpdateAddressRequest {
    uint32 id = 1;
    uint32 user_id = 2;
    string house = 3;
    string street = 4;
    string city = 5;
    uint32 zip = 6;
    string state = 7;
}

message AddressListResponse {
    Response response = 1;
    repeated Address addresses = 2;
}

// Password Messages
message ChangePasswordRequest {
    uint32 user_id = 1;
    string old_password = 2;
    string new_password = 3;
    string confirm_password = 4;
}

// Document Upload Messages
message UploadDocumentRequest {
    uint32 user_id = 1;
    string document_type = 2; // "aadhar", "pancard", "licence"
    bytes document_data = 3;
    string file_name = 4;
}

// Wallet Messages
message WalletResponse {
    Response response = 1;
    float balance = 2;
}

message UpdateWalletRequest {
    uint32 user_id = 1;
    float amount = 2;
    string operation = 3; // "credit", "debit"
}

// Admin Messages
message UserListResponse {
    Response response = 1;
    repeated Profile users = 2;
}

// Existing Messages (Updated)
message ID {
    uint32 id = 1;
}

message IDs {
    uint32 id = 1;
    uint32 user_id = 2;
}

message Profile {
    uint32 user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string aadhar_no = 4;
    string pancard_no = 5;
    string phone = 6;
    string email = 7;
    float wallet = 8;
    string licence = 9;
    bool is_blocked = 10;
    string created_at = 11;
    string updated_at = 12;
}

message Address {
    uint32 id = 1;
    uint32 user_id = 2;
    string house = 3;
    string street = 4;
    string city = 5;
    uint32 zip = 6;
    string state = 7;
    string created_at = 8;
    string updated_at = 9;
}

message AddressList {
    repeated Address addresses = 1;
}

message Password {
    uint32 user_id = 1;
    string old_password = 2;
    string new_password = 3;
    string confirm_password = 4;
}

// Vehicle details message (kept for reference, may be moved to fleet service)
message Vehicle {
    uint32 vehicle_id = 1;
    string vehicle_type = 2;
    string vehicle_transmission = 3;
    string vehicle_fuel_type = 4;
}


